Fixed small bugs and slightly modified some preprocessing steps.
Signed-off-by: Attornado <73835871+Attornado@users.noreply.github.com>

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -68,6 +68,14 @@
                             <button id="withdrawBtn" class="btn btn-primary btn-block" type="submit">WITHDRAW</button></div>
                     </div>
                 </form>
+                <form class="align-items-center" action="/admin/insert_page" method="get" style="margin-top: 20px;">
+                    <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
+                        <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos2">
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Insert ticket</h4>
+                            <input type="hidden" name="insert" value="insert">
+                            <button id="btn-insert-ticket" class="btn btn-primary btn-block btn-insert-ticket" type="submit">INSERT TICKET</button></div>
+                    </div>
+                </form>
             </div>
         </div>
         <div class="popupBox">
