--- a/src/templates/product_form.html
+++ b/src/templates/product_form.html
@@ -76,10 +76,13 @@
                   </div>
 
                   <div class="form-group">
-                    <label for="price">Price</label>
-                    <input type="number" step="0.01" class="form-control" id="price" aria-describedby="priceHelp" placeholder="1.00"
-                        value="{{"{:0.2f}".format(price)}}"
-                    >
+                      <label for="price">Price</label>
+                      {% if price is defined and price is not none %}
+                      <input type="number" step="0.01" class="form-control" id="price" aria-describedby="priceHelp" placeholder="1.00"
+                        value="{{"{:0.2f}".format(price)}}">
+                      {% else %}
+                      <input type="number" step="0.01" class="form-control" id="price" aria-describedby="priceHelp" placeholder="1.00" value="">
+                      {% endif %}
                     <small id="priceHelp" class="form-text text-muted">The price.</small>
                   </div>
 
