--- a/src/templates/product_form.html
+++ b/src/templates/product_form.html
@@ -9,23 +9,11 @@
         <div class="container">
             <div class="product-item">
                 <div class="d-flex product-item-title"></div>
-                <!--<form class="align-items-center" action="/admin/remove_admin" method="get" style="margin: 0px;margin-top: 8px;">
-                    <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
-                        <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Register admin account</h4>
-                            <label for="address_to_admin" style="color: rgb(246,247,248);">Address</label>
-                            <div class="form-group">
-                                <input class="form-control" id="address_to_admin" name="address" type="text">
-                            </div>
-                            <button class="btn btn-primary btn-block" id="promoteBtn" type="submit">REGISTER</button>
-                        </div>
-                    </div>
-                </form>-->
                 {% set action = "/admin/update_ticket" if modify is not none else "/admin/insert_ticket" %}
-                <form style="color: white" action="{{ action }}">
+                <form style="color: white" action="{{ action }}" method="get">
                   <div class="form-group">
                     <label for="origin">Origin</label>
-                    <input type="text" class="form-control" id="origin" aria-describedby="originHelp" placeholder="Origin City"
+                    <input type="text" class="form-control" id="origin" name="origin" aria-describedby="originHelp" placeholder="Origin City"
                         value="{{ origin }}"
                     >
                     <small id="originHelp" class="form-text text-muted">The city of origin.</small>
@@ -33,7 +21,7 @@
 
                   <div class="form-group">
                     <label for="destination">Destination</label>
-                    <input type="text" class="form-control" id="destination" aria-describedby="destinationHelp" placeholder="Destination City"
+                    <input type="text" class="form-control" id="destination" name="destination" aria-describedby="destinationHelp" placeholder="Destination City"
                         value="{{ destination }}"
                     >
                     <small id="destinationHelp" class="form-text text-muted">The destination city.</small>
@@ -41,19 +29,19 @@
 
                   <div class="form-group">
                     <label for="start_date">Departure Date and Time</label>
-                    <input type="datetime-local" value="{{ start_date }}" class="form-control" id="start_date" aria-describedby="start_dateHelp" placeholder="28-07-2022T18:18">
+                    <input type="datetime-local" value="{{ start_date }}" class="form-control" id="start_date" name="start_date" aria-describedby="start_dateHelp" placeholder="28-07-2022T18:18">
                     <small id="start_dateHelp" class="form-text text-muted">The departure date and time.</small>
                   </div>
 
                   <div class="form-group">
                     <label for="end_date">Arrival Date and Time</label>
-                    <input type="datetime-local" value="{{ end_date }}" class="form-control" id="end_date" aria-describedby="end_dateHelp" placeholder="28-07-2022T18:18">
+                    <input type="datetime-local" value="{{ end_date }}" class="form-control" id="end_date" name="end_date" aria-describedby="end_dateHelp" placeholder="28-07-2022T18:18">
                     <small id="end_dateHelp" class="form-text text-muted">The arrival date and time.</small>
                   </div>
 
                   <div class="form-group">
                     <label for="train_type">Train Type</label>
-                    <input type="text" class="form-control" id="train_type" aria-describedby="train_typeHelp" placeholder="Train Type"
+                    <input type="text" class="form-control" id="train_type" name="train_type" aria-describedby="train_typeHelp" placeholder="Train Type"
                         value="{{ train_type }}"
                     >
                     <small id="train_typeHelp" class="form-text text-muted">The train type.</small>
@@ -61,7 +49,7 @@
 
                   <div class="form-group">
                     <label for="train_class">Train Class</label>
-                    <input type="text" class="form-control" id="train_class" aria-describedby="train_classHelp" placeholder="Train Class"
+                    <input type="text" class="form-control" id="train_class" name="train_class" aria-describedby="train_classHelp" placeholder="Train Class"
                         value="{{ train_class }}"
                     >
                     <small id="train_classHelp" class="form-text text-muted">The train class.</small>
@@ -69,7 +57,7 @@
 
                   <div class="form-group">
                     <label for="fare">Fare</label>
-                    <input type="text" class="form-control" id="fare" aria-describedby="fareHelp" placeholder="Fare"
+                    <input type="text" class="form-control" id="fare" name="fare" aria-describedby="fareHelp" placeholder="Fare"
                         value="{{ fare }}"
                     >
                     <small id="fareHelp" class="form-text text-muted">The fare.</small>
@@ -78,13 +66,15 @@
                   <div class="form-group">
                       <label for="price">Price</label>
                       {% if price is defined and price is not none %}
-                      <input type="number" step="0.01" class="form-control" id="price" aria-describedby="priceHelp" placeholder="1.00"
+                      <input type="number" step="0.01" class="form-control" id="price" name="price" aria-describedby="priceHelp" placeholder="1.00"
                         value="{{"{:0.2f}".format(price)}}">
                       {% else %}
                       <input type="number" step="0.01" class="form-control" id="price" aria-describedby="priceHelp" placeholder="1.00" value="">
                       {% endif %}
                     <small id="priceHelp" class="form-text text-muted">The price.</small>
                   </div>
+
+                  <input hidden type="text" class="form-control" id="db_id" name="db_id" value="{{ db_id }}">
 
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
