Updated homepage text

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,9 +8,9 @@
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" src="../static/assets/img/main.jpg">
                 <div class="intro-text left-0 text-centerfaded p-5 rounded bg-faded text-center">
-                    <h2 class="section-heading mb-4"><span class="section-heading-upper">Fresh Coffee</span><span class="section-heading-lower">Worth Drinking</span></h2>
-                    <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!</p>
-                    <div class="mx-auto intro-button"><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" href="#">Visit Us Today!</a></div>
+                    <h2 class="section-heading mb-4"><span class="section-heading-upper">All the Trains</span><span class="section-heading-lower">Worth Riding</span></h2>
+                    <p class="mb-3">Every Renfe route is listed on our site with every facet. Once you try it, you won't be able to use any other site to buy your tickets - we guarantee it!</p>
+                    <div class="mx-auto intro-button"><a class="btn btn-primary d-inline-block mx-auto btn-xl" role="button" href="/products">Buy Now!</a></div>
                 </div>
             </div>
         </div>
@@ -21,8 +21,7 @@
                 <div class="col-xl-9 mx-auto">
                     <div class="cta-inner text-center rounded">
                         <h2 class="section-heading mb-4"><span class="section-heading-upper">Our Promise</span><span class="section-heading-lower">To You</span></h2>
-                        <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied,
-                            please let us know and we will do whatever we can to make things right!</p>
+                        <p class="mb-0">When you enter our site to purchase your ticket, we are committed to providing you with effective and efficient service, with complete and reliable results. If you are not satisfied with the user experience, let us know and we will do everything we can to make it right!</p>
                     </div>
                 </div>
             </div>
