Select date filter changed to input datetime

--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -15,7 +15,8 @@
                             <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Filter</h4>
                             <div class="form-group">
                             	<label style="color: rgb(246,247,248);">Date</label>
-                            	<select class="form-control pb-2" id="daySelect" name="start_date"> </select>
+                            	<input type="datetime-local" class="form-control" id="daySelect" name="start_date" placeholder="2022-07-29T15:42">
+                                <!--<select class="form-control pb-2" id="daySelect" name="start_date"> </select>-->
                             </div>
                             <label style="color: rgb(246,247,248);" for="origin-filter">
                             		Start
@@ -254,6 +255,7 @@
     <script src="../static/assets/js/Animated-Pretty-Product-List-v12.js"></script>
     <script src="../static/assets/js/current-day.js"></script>
     <script src="../static/assets/js/formModifier.js"></script>
+    <script src="../static/assets/js/datetime.js"></script>
 </body>
 
 </html>
