Managed api response and redirect

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -11,7 +11,7 @@
                 <form class="align-items-center" action="/admin/remove_admin" method="get" style="margin: 0px;margin-top: 8px;">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Register admin account</h4>
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Register Admin Account</h4>
                             <label for="address_to_admin" style="color: rgb(246,247,248);">Address</label>
                             <div class="form-group">
                                 <input class="form-control" id="address_to_admin" name="address" type="text">
@@ -36,7 +36,7 @@
                 <form class="align-items-center" action="/admin/register_ticket_usage_setter" method="get" style="margin-top: 20px;">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos1">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Register usage setter account</h4>
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Register Usage Setter Account</h4>
                             <label for="create_usage_setter_addr" style="color: rgb(246,247,248);">Address</label>
                             <div class="form-group">
                                 <input class="form-control" id="create_usage_setter_addr" name="address" type="text">
@@ -61,7 +61,7 @@
                 <form class="align-items-center" action="/admin/withdraw" method="get" style="margin-top: 20px;">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos2">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Transfer founds</h4><label style="color: rgb(246,247,248);">Address</label>
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Transfer Funds</h4><label style="color: rgb(246,247,248);">Address</label>
                             <div class="form-group">
                                 <input class="form-control" id="address_to_deposit" name="address" type="text">
                             </div>
@@ -71,7 +71,7 @@
                 <form class="align-items-center" action="/admin/insert_page" method="get" style="margin-top: 20px;">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos2">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Insert ticket</h4>
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Insert Ticket</h4>
                             <input type="hidden" name="insert" value="insert">
                             <button id="btn-insert-ticket" class="btn btn-primary btn-block btn-insert-ticket" type="submit">INSERT TICKET</button></div>
                     </div>
