--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -12,8 +12,8 @@
                 <form class="align-items-center" action="/login_mnemonic" method="post">
                     <div class="form-row d-flex justify-content-center align-items-center p-0 m-0">
                         <div class="col-lg-6 col-xl-6 p-0 m-0 p-3" id="formConocimientos">
-                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Log with your EHT account</h4><label for="mnemonic" style="color: rgb(246,247,248);">Mnemonic</label>
-                            <div class="form-group"><input id="mnemonic" class="form-control" name="mnemonic" pattern="[a-z]+\s[a-z]+(\s[a-z]+)*" type="text"></div><input class="btn btn-primary btn-block" type="submit" value="LOG"></div>
+                            <h4 class="p-0 m-0 pb-3" style="color: rgb(230,167,86);">Login with your EHT Account</h4><label for="mnemonic" style="color: rgb(246,247,248);">Mnemonic</label>
+                            <div class="form-group"><input id="mnemonic" class="form-control" name="mnemonic" pattern="[a-z]+\s[a-z]+(\s[a-z]+)*" type="text"></div><input class="btn btn-primary btn-block" type="submit" value="LOGIN"></div>
                         <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center"><img src="../static/assets/img/person.png" style="width: 328px;margin: 57px;" alt="Human being"><label>Label</label></div>
                     </div>
                 </form>
@@ -24,7 +24,7 @@
                         <div class="form-group">
                             <input id="private_key" class="form-control" name="private_key" pattern="[0-9a-fA-F]{64}" type="text">
                         </div>
-                        <input class="btn btn-primary btn-block" type="submit" value="LOG">
+                        <input class="btn btn-primary btn-block" type="submit" value="LOGIN">
                     </div>
                 </div>
                 </form>
