--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -7,7 +7,11 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/products">Products</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/refund">Refund</a></li>
+
+                    {% if config['is_admin'] is defined and config['is_admin'] %}
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/admin">Admin</a></li>
+                    {% endif %}
+
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/login">Account</a></li>
                 </ul>
         </div>
